@@ -19,7 +19,7 @@ tied notes longer than 8 quarter notes are ignored.
 
 
 
-#define VERSION "1.42 December 21 2006"
+#define VERSION "1.43 August 08 2012"
 #include <stdio.h>
 #include <stdlib.h>
 #include "abc.h"
